Avoid word break in CardButton component

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,5 +1,5 @@
 $body-font-family: "Roboto", sans-serif;
-$card-title-word-break: break-word !default;
+$card-title-word-break: keep-all !default;
 $card-border-radius: 24px !default;
 $primary: #ffb163;
 $secondary: #4AD4FF;
@@ -8,10 +8,6 @@ $background: #ececec;
 
 .absolute {
     position: absolute;
-}
-
-.p {
-    word-break: break-word;
 }
 
 @import '~vuetify/src/styles/styles.sass';
